compiler/testData/cli/jvm/classAndFacadeClash.kt
package test

class TestPackage {

}


fun z () {

}